rewrote partition rounting, fixed heisenbug with partitions and placements